--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,29 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
+actix-web = "4.3.1"
+reqwest = "0.11.16"
+serde = { version = "1.0.159", features = ["derive"] }
+tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
+config = "0.13.3"
+
+# Using table-like toml syntax to avoid a super-long line!
+[dependencies.sqlx]
+version = "0.6.3"
+default-features = false
+features = [
+    "runtime-actix-native-tls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
