--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ reqwest = "0.11.16"
 serde = { version = "1.0.159", features = ["derive"] }
 tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
 config = "0.13.3"
+uuid = { version = "1.3.1", features = ["v4"] }
+chrono = "0.4.24"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
