--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
 config = "0.13.3"
 uuid = { version = "1.3.1", features = ["v4"] }
 chrono = "0.4.24"
+tracing = { version = "0.1.37", features = ["log"] }
+tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3.7"
+tracing-log = "0.1.3"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
