--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde = { version = "1.0.159", features = ["derive"] }
 tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
 config = "0.13.3"
 uuid = { version = "1.3.1", features = ["v4"] }
-chrono = "0.4.24"
+chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3.7"
