--- a/spec.yaml
+++ b/spec.yaml
@@ -35,3 +35,10 @@ services:
     # All incoming requests should be routed to our app
     routes:
     - path: /
+databases:
+  - engine: PG
+    name: newsletter
+    num_nodes: 1
+    size: db-s-dev-database
+    # Postgres version - using the latest here
+    version: "15"
