--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tracing-log = "0.1.3"
 once_cell = "1.17.1"
 secrecy = { version = "0.8.0", features = ["serde"] }
 tracing-actix-web = "0.7.3"
+serde-aux = "4.2.0"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
