--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ once_cell = "1.17.1"
 secrecy = { version = "0.8.0", features = ["serde"] }
 tracing-actix-web = "0.7.3"
 serde-aux = "4.2.0"
+unicode-segmentation = "1.10.1"
+validator = "0.16.0"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
